change section to project

--- a/leaf.html
+++ b/leaf.html
@@ -12,19 +12,19 @@
     <nav role="navigation">Nav</nav>
     <main role="main">
         <section>
-            Section 1
+            Project 1
         </section>
 
         <section>
-            Section 2
+            Project 2
         </section>
 
         <section>
-            Section 3
+            Project 3
         </section>
 
         <section>
-            Section 4
+            Project 4
         </section>
     </main>
   </body>
